apt (0.9.2) unstable; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/deb/deblistparser.cc:
    - only treat the native apt as essential by default (Closes: #669377)
  * apt-pkg/contrib/fileutl.cc:
    - redirect stderr from compressors to /dev/null

  [ Malcolm Scott ]
  * apt-pkg/packagemanager.cc:
    - iterate over all pre-depends or-group member instead of looping
      endlessly over the first member in SmartUnpack (LP: #985852)

 -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 19 Apr 2012 22:38:02 +0200

apt (0.9.1) unstable; urgency=low

  [ David Kalnischkies ]
  * cmdline/apt-get.cc:
    - if pkgCacheFile::Generate is disabled in 'update' don't
      remove the caches (and don't try to open them)
  * apt-pkg/packagemanager.cc:
    - init counter in SmartConfigure so that the loop-breaker isn't
      triggered at random… (Closes: #669060)

  [ Christian Perrier ]
  * Fix typo in apt-get(8). Closes: #664833
  * Replace "argument" by "paramètre" in French translation.
    Merci, les Titeps!
  * Drop hardcoded "en.html" suffix in apt-secure manpage.
    Thanks to David Prevot.
  
 -- Michael Vogt <mvo@debian.org>  Tue, 17 Apr 2012 09:49:31 +0200

apt (0.9.0) unstable; urgency=low

  * upload to debian/unstable

 -- Michael Vogt <mvo@debian.org>  Mon, 16 Apr 2012 15:53:17 +0200

apt (0.9.0~exp1) experimental; urgency=low

  [ Michael Vogt ]
  * apt-pkg/packagemanager.cc:
    - fix inconsistent clog/cout usage in the debug output
    - add APT::pkgPackageManager::MaxLoopCount to ensure that the
      ordering code does not get into a endless loop when it flip-flops
      between two states
  * update libapt-inst1.4 to libapt-inst1.5 because of the cleanup 
    performed
  * prepare debian/unstable upload, if there are no issues with this
    upload it will directly go into unstable as 0.9.0  

  [ David Kalnischkies ]
  * do not update po and pot files in the process of the build as this
    causes timestamp changes for the mo files which therefore can't