@@ -5,13 +5,17 @@ apt (0.9.2) unstable; urgency=low
     - only treat the native apt as essential by default (Closes: #669377)
   * apt-pkg/contrib/fileutl.cc:
     - redirect stderr from compressors to /dev/null
+  * apt-pkg/aptconfiguration.cc:
+    - if the compressor is not installed, but we link against it's
+      library accept it as a CompressionType (Closes: #669328)
+
 
   [ Malcolm Scott ]
   * apt-pkg/packagemanager.cc:
     - iterate over all pre-depends or-group member instead of looping
       endlessly over the first member in SmartUnpack (LP: #985852)
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 19 Apr 2012 22:38:02 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Fri, 20 Apr 2012 09:52:01 +0200
 
 apt (0.9.1) unstable; urgency=low
 
